# weread

./: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: release.yaml
src/: App.svelte  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: app.json
src-tauri/icons/: icon.icns
src-tauri/inject/: event.js  preload.js  store.ts  style.css
src-tauri/src/: main.rs  tray.rs
src/lib/: Setting.svelte
